--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcsh 'Protestantism'
 - !lcc 'B'
 - !lcsh 'Revelation'
+- GITenberg
 title: Versuch einer Kritik aller Offenbarung
 url: http://www.gutenberg.org/ebooks/18255
